--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,275 +1,27 @@
-input[type="text"]:focus { outline: none; }	/*убираем рамку на активном поле */
-input[type="text"] {padding-left:30px;}		/*добавляем отступ для иконок в полях ввода*/
-button:focus {								/*убираем рамку на активной кнопке*/
-	outline: none;
-	}
-
-html{
-	height:100%;
-	min-height:680px;
-	min-width:390px;
-	overflow:hidden;
-}
-.color1{
-	background-color:#FFBCBC;
-	border:1px dashed #DD9B9B;
-	opacity:.5;
-}
-.color2{
-	background-color:#BCFFBC;
-	border:1px dashed #9BDD9B;
-	opacity:.5;
-}
-.color3{
-	background-color:#BCBCFF;
-	border:1px dashed #9B9BDD;
-	opacity:.5;
-}
-body{
-	height:100%;
-	display:flex;
-	flex-direction:column;
-	justify-content:space-between;
-	align-items:center;
-
-}
-.header{
-	height:80px;
-	width:100%;
-	text-align:center;
-	z-index:1;
-}
-.header-title{
-	font-size:2.5rem;
-	font-family: 'Fira Sans', sans-serif;
-
-}
-.redletter{
-	color:red;
-	font-family: 'Kurale', serif;
-	font-size:3.5rem;
-}
-.logotype{
-	position:absolute;
-	height:150px;
-	left:20px;
-	width:150px;
-	top:20px;
-	background-image:url(/img/login/logo.png);
-	background-size:contain;
-	background-repeat:no-repeat;
-	z-index:0;
-}
-.loginform{
-	width:300px;
-	height:400px;
-	border:8px solid white;
-	background-image:url(/img/login/bckg2.jpg);
-	background-size:100%;
-}
-form{
-	width:300px;
-	height:400px;
-}
-.loginform-title{
-	display:block;
-	text-align:center;
-	font-family: 'Fira Sans', sans-serif;
-	font-size:1.5rem;
-	text-shadow: 0px -1px 1px #BBB;
-	margin-top:40px;
-}
-.loginform-title-separator{
-	
-	background-color:black;
-	height:2px;
-	border:none;
-	box-shadow: 0px 1px 0px #BBB;
-	width:250px;
-}
-.loginform-loginfield{
-	background-image:url(/img/login/prof.png);
-	background-repeat:no-repeat;
-	background-size: 20px 20px;
-	background-position: 5px 50%;
-	background-color:#FFF4CC;
-	width:220px;
-	margin-left:25px;
-	margin-top:25px;
-	height:30px;
-	font-family: 'Fira Sans', sans-serif;
-	font-size:1rem;
-	border-radius:5px;
-	border:1px solid black;
-}
-.loginform-passwordfield{
-	background-image:url(/img/login/lock.png);
-	background-repeat:no-repeat;
-	background-size: 20px 20px;
-	background-position: 5px 50%;
-	background-color:#FFF4CC;
-	width:220px;
-	margin-left:25px;
-	margin-top:15px;
-	height:30px;
-	font-family: 'Fira Sans', sans-serif;
-	font-size:1rem;
-	border-radius:5px;
-	border:1px solid black;
-}
-.loginform-button{
-	margin:15px 25px 0 25px;
-	width:250px;
-	height:30px;
-	background-image:url(/img/login/auth.png);
-	background-repeat:no-repeat;
-	background-size: 20px 20px;
-	background-position: 5px 50%;
-	background: #cdeb8e; /* Old browsers */
-background: -moz-linear-gradient(top, #cdeb8e 0%, #a5c956 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(top, #cdeb8e 0%,#a5c956 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to bottom, #cdeb8e 0%,#a5c956 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cdeb8e', endColorstr='#a5c956',GradientType=0 );
-	border:1px solid black;
-	height:30px;
-	font-family: 'Fira Sans', sans-serif;
-	font-size:1rem;
-	border-radius:5px;
-}
-.loginform-button:hover{
-background: #cdeb8e; /* Old browsers */
-background: -moz-linear-gradient(top, #cdeb8e 34%, #a5c956 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(top, #cdeb8e 34%,#a5c956 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to bottom, #cdeb8e 34%,#a5c956 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cdeb8e', endColorstr='#a5c956',GradientType=0 );
+body {
+    display: flex;
+    justify-content: center;
 }
 
-.loginform-button:active
-{
-background: #cdeb8e; /* Old browsers */
-background: -moz-linear-gradient(top, #cdeb8e 68%, #a5c956 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(top, #cdeb8e 68%,#a5c956 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to bottom, #cdeb8e 68%,#a5c956 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cdeb8e', endColorstr='#a5c956',GradientType=0 );
+.auth-box {
+	width: 240px;
+    height: 280px;
+    border-radius: 5px;
+    background-color: #e5d3c1;
+    border: solid 0.5px #231f20;
 }
 
-a {
-	color:black;
-	font-family:'Fira Sans', sans-serif;
-	text-decoration:none;
-}
-a:hover{
-	color:#0C6B1D;
-}
-.loginform-reglink{
-	display:inline-block;
-	margin-left:25px;
-	margin-top:15px;
-	margin-right:15px;
-}
-.loginform-reslink{
-	display:inline-block;
-	text-align:right;
-	margin-top:15px;
-	margin-right:25px;
+.auth-form {
 
 }
 
-.loginform-checkremember{
-	margin-left:25px;
-}
-
-.loginform-labelremember{
-	display:inline-block;
-	font-family: 'Fira Sans', sans-serif;
-	margin-top: 15px;
+.auth-form-sn {
 
 }
 
-.social{
-	width:200px;
-	margin:15px 50px;
-	height:40px;
-	display:flex;
-	flex-direction:row;
-	justify-content:space-between;
-	align-items:stretch;
-}
+.social-button {
+    width: 22px;
+    height: 22px;
 
-.social-vk{
-	width:40px;
-	background: url(/img/login/social-set.png);
-	background-size:160px 40px;
-	background-position:0px 0px;
-}
-
-.social-fb{
-	width:40px;
-	background: url(/img/login/social-set.png);
-	background-size:160px 40px;
-	background-position:-40px 0px;
-}
-.social-tw{
-	width:40px;
-	background: url(/img/login/social-set.png);
-	background-size:160px 40px;
-	background-position:-80px 0px;
-}
-.social-gp{
-	width:40px;
-	background: url(/img/login/social-set.png);
-	background-size:160px 40px;
-	background-position:-120px 0px;
-}
-@media (max-width:500px){
-.header-title{
-	margin-left:100px;
-}
-}
-
-@media (max-height:680px){
-html{
-	overflow:auto;
-}
-}
-
-
-/*начало стеклянной формы входа
-.loginform{
-	width:300px;
-	height:300px;
-	border: 1px black solid;
-	border-radius: 10px;
-	background-color:rgba(192,192,192,.2);
-	box-shadow:inset 0 7px 10px -5px white,
-	inset 0 0 10px 0 black,
-	0 20px 40px -10px black;
-	}
-.loginform-title{
-	margin-top:10px;
-	display:block;
-	font-size:1.5rem;
-	font-family:Tahoma, sans-serif;
-	color:#BBB;
-	text-shadow: 0px 2px 1px #111;
-	text-align:center;
-}
-.loginform-title-separator{
-	opacity:.5;
-	color:#BBB;
-	box-shadow: 0px 1px 0px #111;
-}
-*/
-
-.footer{
-	height:50px;
-	width:100%;
-
-}
-.footer-copy{
-	margin:0 auto 0;
-	font-family: 'Fira Sans', sans-serif;
-	font-size: 0.8rem;
-	text-align:center;
-	display:block;
+    background-color: #0d6aad;
 }
