--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,27 +1,174 @@
+@font-face {
+    font-family: 'Kurale';
+    src: url('/fonts/kurale-regular/Kurale-Regular.eot');
+    src: url('/fonts/kurale-regular/Kurale-Regular.eot') format('embedded-opentype'),
+    url('/fonts/kurale-regular/Kurale-Regular.woff2') format('woff2'),
+    url('/fonts/kurale-regular/Kurale-Regular.woff') format('woff'),
+    url('/fonts/kurale-regular/Kurale-Regular.ttf') format('truetype'),
+    url('/fonts/kurale-regular/Kurale-Regular.svg#Kurale-Regular') format('svg');
+}
+
+@font-face {
+    font-family: 'MyriadPro';
+    src: url('/fonts/myriadpro-regular/MyriadPro-Regular.eot');
+    src: url('/fonts/myriadpro-regular/MyriadPro-Regular.eot') format('embedded-opentype'),
+    url('/fonts/myriadpro-regular/MyriadPro-Regular.woff2') format('woff2'),
+    url('/fonts/myriadpro-regular/MyriadPro-Regular.woff') format('woff'),
+    url('/fonts/myriadpro-regular/MyriadPro-Regular.ttf') format('truetype'),
+    url('/fonts/myriadpro-regular/MyriadPro-Regular.svg#MyriadPro-Regular.svg') format('svg');
+}
+
 body {
     display: flex;
     justify-content: center;
+    font-family: "MyriadPro", serif;
 }
 
 .auth-box {
-	width: 240px;
-    height: 280px;
-    border-radius: 5px;
+    width: 476px;
+    height: 554px;
+    border-radius: 10px;
     background-color: #e5d3c1;
-    border: solid 0.5px #231f20;
+    border: solid 1px #231f20;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.auth-box > h2 {
+    margin: 8px 0 0 0;
+    font-size: 32px;
+    font-weight: normal;
+    line-height: 1.19;
+    font-family: "Kurale", serif;
+    color: #513b25;
+    padding-left: 3px;
+    padding-right: 3px;
+    border-bottom: 2px solid #513b25;
+}
+
+.auth-box > span {
+    margin: 5px 0 5px 0;
+    font-size: 22px;
+    color: #513b25;
 }
 
 .auth-form {
+    width: 398px;
+    height: 287px;
+    background-color: #eddfd3;
+    margin-top: 18px;
+    border-radius: 10px 10px 0 0;
+    display: flex;
+    flex-direction: column;
+}
 
+.auth-form > h3 {
+    font-size: 22px;
+    font-weight: normal;
+    line-height: 1.73;
+    color: #513b25;
+    margin: 5px 0 8px 0;
+    align-self: center;
+}
+
+.auth-form > button {
+    align-self: center;
+    width: 156px;
+    height: 46px;
+    text-transform: uppercase;
+    color: #ffffff;
+    font-size: 22px;
+}
+
+.btn {
+    background-color: #26a69a;
+    cursor: pointer;
+    border: none;
+    border-radius: 2px;
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
+    transition: .3s ease-out;
+}
+
+.btn:hover {
+    background-color: #2bbbad;
+    box-shadow: 0 3px 3px 0 rgba(0,0,0,0.14), 0 1px 7px 0 rgba(0,0,0,0.12), 0 3px 1px -1px rgba(0,0,0,0.2);
+}
+
+.auth-form > div {
+    align-self: center;
+    display: flex;
+    margin-top: 17px;
+}
+
+.auth-form > div > a {
+    margin-right: 18px;
+}
+
+.auth-form  a {
+    font-size: 19px;
+    color: #b09f89;
+}
+
+input[name="name"], input[name="password"] {
+    margin: 8px 15px 8px 15px;
+    height: 37px;
+    border-radius: 4px;
+    background-color: #ffffff;
+    border: solid 1px #c8b8a9;
+    font-size: 21px;
+    padding-left: 20px;
+    color: #513b25;
+}
+
+input[type="checkbox"] {
+    display: none;
 }
 
 .auth-form-sn {
-
+    width: 398px;
+    height: 117px;
+    background-color: #eddfd3;
+    border-radius: 0 0 10px 10px;
+    display: flex;
+    flex-direction: column;
 }
 
-.social-button {
-    width: 22px;
-    height: 22px;
+.auth-form-sn > h3 {
+    font-size: 22px;
+    margin: 10px 0 18px 21px;
+    font-weight: normal;
+    align-self: center;
+    color: #593c33;
+}
 
-    background-color: #0d6aad;
+.auth-form-sn > div {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 41px 0 41px;
+}
+
+.vk-link,
+.fb-link,
+.tw-link,
+.gg-link,
+.ok-link {
+    width: 44px;
+    height: 44px;
+}
+
+.vk-link {
+    background-color: #46587d;
+}
+.fb-link {
+    background-color: #444d8b;
+}
+.tw-link {
+    background-color: #409dd1;
+}
+.gg-link {
+    background-color: #c33920;
+}
+.ok-link {
+    background-color: #f39336;
 }
