--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,7 +36,7 @@ body {
 }
 
 .auth-box > h2 {
-    margin: 8px 0 0 0;
+    margin: 8px 0 -5px 0;
     font-size: 32px;
     font-weight: normal;
     line-height: 1.19;
@@ -44,7 +44,16 @@ body {
     color: #513b25;
     padding-left: 3px;
     padding-right: 3px;
-    border-bottom: 2px solid #513b25;
+}
+
+.auth-box > hr {
+    background-color: #513b25;
+    color: #513b25;
+    width: 210px;
+    margin: 0;
+    padding: 0;
+    border: none;
+    height: 2px;
 }
 
 .auth-box > span {
@@ -55,7 +64,7 @@ body {
 
 .auth-form {
     width: 398px;
-    height: 287px;
+    height: 305px;
     background-color: #eddfd3;
     margin-top: 18px;
     border-radius: 10px 10px 0 0;
@@ -72,13 +81,25 @@ body {
     align-self: center;
 }
 
+.checkbox-box {
+    color: #b09f89;
+    font-size: 19px;
+    display: flex;
+    align-items: baseline;
+    margin: 0 0 15px 15px;
+}
+
+.checkbox-box > label {
+    margin-left: 5px;
+}
+
 .auth-form > button {
     align-self: center;
     width: 156px;
     height: 46px;
     text-transform: uppercase;
     color: #ffffff;
-    font-size: 22px;
+    font-size: 20px;
 }
 
 .btn {
@@ -95,19 +116,24 @@ body {
     box-shadow: 0 3px 3px 0 rgba(0,0,0,0.14), 0 1px 7px 0 rgba(0,0,0,0.12), 0 3px 1px -1px rgba(0,0,0,0.2);
 }
 
-.auth-form > div {
+.link-box {
     align-self: center;
     display: flex;
     margin-top: 17px;
 }
 
-.auth-form > div > a {
+.link-box > a {
     margin-right: 18px;
 }
 
-.auth-form  a {
+.link-box   a {
     font-size: 19px;
     color: #b09f89;
+    transition: .3s ease-out;
+}
+
+.link-box  a:hover {
+    color: #513b25;
 }
 
 input[name="name"], input[name="password"] {
@@ -119,10 +145,6 @@ input[name="name"], input[name="password"] {
     font-size: 21px;
     padding-left: 20px;
     color: #513b25;
-}
-
-input[type="checkbox"] {
-    display: none;
 }
 
 .auth-form-sn {
@@ -171,4 +193,42 @@ input[type="checkbox"] {
 }
 .ok-link {
     background-color: #f39336;
+}
+
+
+/**
+ * Code from http://codepen.io/fxm90/pen/JdmaeL
+ */
+.checkbox {
+    position: relative;
+    width: 1rem;
+    height: 1rem;
+    margin-right: .75rem;
+    cursor: pointer;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    outline: 0;
+}
+.checkbox:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    border: 2px solid #c4a28c;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
+.checkbox:checked:before {
+    height: 50%;
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    border-top-style: none;
+    border-right-style: none;
+}
+.checkbox--red:checked:before {
+    border-color: #c4a28c;
 }
