--- a/public/css/style.css
+++ b/public/css/style.css
@@ -116,6 +116,10 @@ body {
     box-shadow: 0 3px 3px 0 rgba(0,0,0,0.14), 0 1px 7px 0 rgba(0,0,0,0.12), 0 3px 1px -1px rgba(0,0,0,0.2);
 }
 
+.btn:focus {
+    outline: 0;
+}
+
 .link-box {
     align-self: center;
     display: flex;
@@ -126,7 +130,7 @@ body {
     margin-right: 18px;
 }
 
-.link-box   a {
+.link-box a {
     font-size: 19px;
     color: #b09f89;
     transition: .3s ease-out;
