--- a/public/css/auth_b/style.css
+++ b/public/css/auth_b/style.css
@@ -117,6 +117,7 @@ body {
     background-color: #eddfd3;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .auth-email > h3 {
@@ -125,5 +126,96 @@ body {
     line-height: 1.73;
     color: #513b25;
     margin: 5px 0 19px 0;
-    align-self: center;
 }
+
+.auth-email > form {
+    margin: 0 0 37px 0;
+    padding: 0;
+    display: flex;
+    width: 768px;
+    justify-content: space-between;
+}
+
+input[name="name"] {
+    margin: 0;
+    height: 46px;
+    width: 586px;
+    border-radius: 4px;
+    background-color: #ffffff;
+    border: solid 1px #c8b8a9;
+    font-size: 21px;
+    padding-left: 20px;
+    color: #513b25;
+    transition: .3s ease-out;
+}
+
+input[name="name"]:focus {
+    transition: .3s ease-out;
+    outline-offset: 0;
+    outline: 0;
+    border: 1px solid #513b25; /* Рамка при получении фокуса */
+}
+
+.auth-email > form > button {
+    width: 148px;
+    height: 48px;
+}
+
+.auth-registration {
+    width: 804px;
+    background-color: #eddfd3;
+    margin: 0 0 26px 0;
+    border-radius: 0 0 10px 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.auth-registration > h3 {
+    font-size: 22px;
+    font-weight: normal;
+    line-height: 1.73;
+    color: #513b25;
+    margin: 5px 0 19px 0;
+}
+
+.auth-registration > button {
+    width: 214px;
+    height: 46px;
+    margin: 0 0 25px 0;
+}
+
+
+.btn {
+    text-transform: uppercase;
+    color: #ffffff;
+    font-size: 20px;
+    background-color: #26a69a;
+    cursor: pointer;
+    border: none;
+    border-radius: 2px;
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
+    transition: .3s ease-out;
+}
+
+.btn:hover {
+    background-color: #2bbbad;
+    box-shadow: 0 3px 3px 0 rgba(0,0,0,0.14), 0 1px 7px 0 rgba(0,0,0,0.12), 0 3px 1px -1px rgba(0,0,0,0.2);
+}
+
+.btn:focus {
+    outline: 0;
+}
+
+.err-input {
+    border: 1px solid #ff2727 !important;
+}
+
+.err-text {
+    color: #ff2727 !important;
+}
+
+::-webkit-input-placeholder {color:#e0e0e1;}
+::-moz-placeholder          {color:#e0e0e1;}/* Firefox 19+ */
+:-moz-placeholder           {color:#e0e0e1;}/* Firefox 18- */
+:-ms-input-placeholder      {color:#e0e0e1;}
