--- a/public/css/auth_b/style.css
+++ b/public/css/auth_b/style.css
@@ -22,6 +22,7 @@ body {
     display: flex;
     justify-content: center;
     font-family: "MyriadPro", serif;
+    background-color: #544e4b;       //*Временно*//
 }
 
 .auth-box {
@@ -32,13 +33,14 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 40px;       //*Временно*//
 }
 
 .auth-box > h2 {
     margin: 8px 0 -5px 0;
     font-size: 32px;
     font-weight: normal;
-    line-height: 1.19;
+    line-height: 1.25;
     font-family: "Kurale", serif;
     color: #513b25;
     padding-left: 3px;
@@ -48,7 +50,7 @@ body {
 .auth-box > hr {
     background-color: #513b25;
     color: #513b25;
-    width: 210px;
+    width: 192px;
     margin: 0;
     padding: 0;
     border: none;
@@ -57,8 +59,8 @@ body {
 
 .auth-social {
     width: 804px;
-    background-color: #eddfd3;
-    margin-top: 18px;
+    background-color: #f9eade;
+    margin-top: 15px;
     border-radius: 10px 10px 0 0;
     display: flex;
     flex-direction: column;
@@ -69,14 +71,14 @@ body {
     font-weight: normal;
     line-height: 1.73;
     color: #513b25;
-    margin: 5px 0 19px 0;
+    margin: 17px 0 15px 0;
     align-self: center;
 }
 
 .auth-social > div {
     display: flex;
     justify-content: space-between;
-    margin: 0 41px 17px 41px;
+    margin: 0 41px 16px 41px;
     width: 316px;
     align-self: center;
 }
@@ -92,18 +94,38 @@ body {
 
 .vk-link {
     background-color: #46587d;
+    transition: .2s ease-out;
+}
+.vk-link:hover {
+    background-color: #5873a3;
 }
 .fb-link {
     background-color: #444d8b;
+    transition: .2s ease-out;
+}
+.fb-link:hover {
+    background-color: #606fb7;
 }
 .tw-link {
     background-color: #409dd1;
+    transition: .2s ease-out;
+}
+.tw-link:hover {
+    background-color: #65aedc;
 }
 .gg-link {
     background-color: #c33920;
+    transition: .2s ease-out;
+}
+.gg-link:hover {
+    background-color: #dd3e0f;
 }
 .ok-link {
     background-color: #f39336;
+    transition: .2s ease-out;
+}
+.ok-link:hover {
+    background-color: #f2ae53;
 }
 
 .text-or {
@@ -114,7 +136,7 @@ body {
 
 .auth-email {
     width: 804px;
-    background-color: #eddfd3;
+    background-color: #f9eade;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -163,7 +185,7 @@ input[name="name"]:focus {
 
 .auth-registration {
     width: 804px;
-    background-color: #eddfd3;
+    background-color: #f9eade;
     margin: 0 0 26px 0;
     border-radius: 0 0 10px 10px;
     display: flex;
@@ -190,7 +212,7 @@ input[name="name"]:focus {
     text-transform: uppercase;
     color: #ffffff;
     font-size: 20px;
-    background-color: #26a69a;
+    background-color: #2fd1b2;
     cursor: pointer;
     border: none;
     border-radius: 2px;
@@ -199,7 +221,7 @@ input[name="name"]:focus {
 }
 
 .btn:hover {
-    background-color: #2bbbad;
+    background-color: #5dd8c0;
     box-shadow: 0 3px 3px 0 rgba(0,0,0,0.14), 0 1px 7px 0 rgba(0,0,0,0.12), 0 3px 1px -1px rgba(0,0,0,0.2);
 }
 
@@ -219,3 +241,4 @@ input[name="name"]:focus {
 ::-moz-placeholder          {color:#e0e0e1;}/* Firefox 19+ */
 :-moz-placeholder           {color:#e0e0e1;}/* Firefox 18- */
 :-ms-input-placeholder      {color:#e0e0e1;}
+
