--- a/public/css/auth_a/style.css
+++ b/public/css/auth_a/style.css
@@ -22,19 +22,23 @@ body {
     display: flex;
     justify-content: center;
     font-family: "MyriadPro", serif;
-    background-color: #544e4b;       //*Временно*//
+    background-color: #544e4b;       /*Временно*/
 }
 
+/*
+    Главный бокс
+*/
+
 .auth-box {
+    max-width: 100%;
     width: 476px;
-    height: 554px;
     border-radius: 10px;
     background-color: #e5d3c1;
     border: solid 1px #231f20;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 40px;       //*Временно*//
+    margin-top: 40px;       /*Временно*/
 }
 
 .auth-box > h2 {
@@ -65,6 +69,7 @@ body {
 }
 
 .auth-form {
+    max-width: 90%;
     width: 398px;
     height: 305px;
     background-color: #f9eade;
@@ -93,53 +98,6 @@ body {
 
 .checkbox-box > label {
     margin-left: 1px;
-}
-
-.auth-form > button {
-    align-self: center;
-    width: 156px;
-    height: 46px;
-    text-transform: uppercase;
-    color: #ffffff;
-    font-size: 20px;
-}
-
-.btn {
-    background-color: #2fd1b2;
-    cursor: pointer;
-    border: none;
-    border-radius: 4px;
-    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
-    transition: .3s ease-out;
-}
-
-.btn:hover {
-    background-color: #5dd8c0;
-    box-shadow: 0 3px 3px 0 rgba(0,0,0,0.14), 0 1px 7px 0 rgba(0,0,0,0.12), 0 3px 1px -1px rgba(0,0,0,0.2);
-}
-
-.btn:focus {
-    outline: 0;
-}
-
-.link-box {
-    align-self: center;
-    display: flex;
-    margin-top: 17px;
-}
-
-.link-box > a {
-    margin-right: 18px;
-}
-
-.link-box a {
-    font-size: 19px;
-    color: #b09f89;
-    transition: .3s ease-out;
-}
-
-.link-box  a:hover {
-    color: #513b25;
 }
 
 input[name="name"], input[name="password"] {
@@ -185,27 +143,82 @@ input:-ms-input-placeholder{
     color: #ff2727 !important;
 }
 
+.auth-form > button {
+    align-self: center;
+    width: 156px;
+    height: 46px;
+    text-transform: uppercase;
+    color: #ffffff;
+    font-size: 20px;
+}
+
+.btn {
+    background-color: #2fd1b2;
+    cursor: pointer;
+    border: none;
+    border-radius: 4px;
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
+    transition: .3s ease-out;
+}
+
+.btn:hover {
+    background-color: #5dd8c0;
+    box-shadow: 0 3px 3px 0 rgba(0,0,0,0.14), 0 1px 7px 0 rgba(0,0,0,0.12), 0 3px 1px -1px rgba(0,0,0,0.2);
+}
+
+.btn:focus {
+    outline: 0;
+}
+
+.link-box {
+    margin: 14px 0 16px 0;
+    align-self: center;
+    display: flex;
+}
+
+.link-box > a:first-child {
+    margin-right: 18px;
+}
+
+.link-box a {
+    font-size: 19px;
+    color: #b09f89;
+    transition: .3s ease-out;
+}
+
+.link-box  a:hover {
+    color: #513b25;
+}
+
+/*
+ Блок социальных сетей
+*/
+
 .auth-form-sn {
+    margin: 0 0 36px 0;
+    max-width: 90%;
     width: 398px;
-    height: 117px;
     background-color: #f9eade;
     border-radius: 0 0 10px 10px;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .auth-form-sn > h3 {
+    text-align: center;
     font-size: 22px;
-    margin: 10px 0 18px 21px;
+    margin: 10px 0 18px 0;
     font-weight: normal;
-    align-self: center;
     color: #593c33;
 }
 
 .auth-form-sn > div {
+    width: 316px;
+    max-width: 90%;
     display: flex;
     justify-content: space-between;
-    margin: 0 41px 0 41px;
+    margin: 0 0 18px 0;
 }
 
 .vk-link,
