--- a/public/css/auth_a/style.css
+++ b/public/css/auth_a/style.css
@@ -96,10 +96,12 @@ body {
 }
 
 .checkbox-box > label {
-    display: flex;
-    align-items: center;
+    display: block;
 }
 
+.remember-me-text {
+    vertical-align: text-bottom;
+}
 
 input[name="name"], input[name="password"] {
     margin: 8px 15px 8px 15px;
@@ -305,7 +307,7 @@ input:-ms-input-placeholder{
     pointer-events: none;
 }
 .checkbox .checkbox-material {
-    margin-right: 8px;
+    margin-right: 5px;
     box-sizing: border-box;
     vertical-align: middle;
     position: relative;
