--- a/public/css/auth_a/style.css
+++ b/public/css/auth_a/style.css
@@ -101,6 +101,7 @@ body {
 
 .remember-me-text {
     vertical-align: text-bottom;
+    margin-left: 5px;
 }
 
 input[name="name"], input[name="password"] {
@@ -350,8 +351,8 @@ input:-ms-input-placeholder{
     width: 0;
     height: 0;
     box-shadow: 0 0 0 0, 0 0 0 0, 0 0 0 0, 0 0 0 0, 0 0 0 0, 0 0 0 0, 0 0 0 0 inset;
-    -webkit-animation: checkbox-off 0.3s forwards ease-out;
-    animation: checkbox-off 0.3s forwards ease-out;
+    /*-webkit-animation: checkbox-off 0.3s forwards ease-out;*/
+    /*animation: checkbox-off 0.3s forwards ease-out;*/
 }
 .checkbox input[type=checkbox]:focus + .checkbox-material .check:after {
     box-sizing: border-box;
@@ -364,9 +365,8 @@ input:-ms-input-placeholder{
     animation: checkbox-on 0.3s forwards ease-out;
 }
 .checkbox input[type=checkbox]:not(:checked) + .checkbox-material:before {
-    box-sizing: border-box;
-    -webkit-animation: rippleOff 700ms forwards ease-out;
-    animation: rippleOff 700ms forwards ease-out;
+    /*-webkit-animation: rippleOff 700ms forwards ease-out;*/
+    /*animation: rippleOff 700ms forwards ease-out;*/
 }
 .checkbox input[type=checkbox]:checked + .checkbox-material:before {
     box-sizing: border-box;
