update: отредактирован внешний вид отображения рецензий, ограничена в изменениях область ввода текста рецензии

--- a/public/css/fix.css
+++ b/public/css/fix.css
@@ -61,6 +61,12 @@
 .book-image {
     margin-bottom: 10px;
 }
-.user-edit-about {
+.user-edit-about,
+.review-edit-textarea {
+    min-width: 100%;
     max-width: 100%;
+    min-height: 50px;
+}
+.review-avatar__image {
+    width: 120px;
 }
