--- a/resources/less/landing/books/landing.books.more.less
+++ b/resources/less/landing/books/landing.books.more.less
@@ -9,6 +9,17 @@
     width: 100%;
     background: cornflowerblue;
     color: white;
+
+    &:hover {
+      background-color: #587ecb;
+      color: white;
+    }
+
+    &:active {
+      background-color: #4c69aa;
+      color: white;
+      box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
+    }
   }
 }
 
