--- a/resources/less/landing/landing.button.less
+++ b/resources/less/landing/landing.button.less
@@ -1,5 +1,7 @@
 .landing-button {
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 80%;
   height: 30px;
   margin: 0;
@@ -10,7 +12,7 @@
   background-color: #fff;
   font-size: 14px;
   color: #636b6f;
-  -ms-touch-action: manipulation;
+  text-decoration: none;
   touch-action: manipulation;
   cursor: pointer;
 
