add: контроллер для отрисовки лэндинга, отображение пользователей на главной странице

--- a/resources/less/landing/--landing.less
+++ b/resources/less/landing/--landing.less
@@ -7,4 +7,6 @@
 @import "landing.button.less";
 @import "landing.content.less";
 @import "landing.form.less";
+@import "element/--element.less";
 @import "books/--books.less";
+@import "users/--users.less";
