--- a/public/css/style.css
+++ b/public/css/style.css
@@ -38,7 +38,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  margin-top: 150px;
+  margin-top: 120px;
   box-sizing: border-box;
 }
 @media screen and (max-width: 991px) {
@@ -63,6 +63,48 @@
   align-items: center;
   width: 100%;
   margin-top: auto;
+}
+.landing-element {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
+  margin: 0 20px 20px;
+  padding: 0 2px;
+  box-sizing: border-box;
+  border-top: 1px solid #d3e0e9;
+  border-bottom: 1px solid #d3e0e9;
+  background: #ffffff;
+}
+.landing-element__area {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  max-width: 1000px;
+  box-sizing: border-box;
+}
+.landing-element__title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 40px;
+  margin-bottom: 10px;
+  font-size: 20px;
+  text-transform: uppercase;
+  border-bottom: 1px solid #d3e0e9;
+}
+.landing-element__part {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+@media screen and (max-width: 910px) {
+  .landing-books__title {
+    height: 30px;
+  }
 }
 .landing-books {
   display: flex;
@@ -186,5 +228,62 @@
 @media screen and (max-width: 910px) {
   .landing-books-more {
     margin-top: 5px;
+  }
+}
+.landing-user {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 15%;
+  justify-content: flex-start;
+  align-items: center;
+  margin: 5px;
+  padding-bottom: 15px;
+  min-height: 200px;
+}
+.landing-user-avatar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+.landing-user-avatar__image {
+  height: 120%;
+}
+.landing-user__name {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  margin-bottom: 10px;
+  text-align: center;
+}
+.landing-user__profile {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin-top: auto;
+}
+@media screen and (max-width: 991px) {
+  .landing-user__name {
+    font-size: 14px;
+  }
+}
+@media screen and (max-width: 910px) {
+  .landing-user {
+    flex-basis: 30%;
+    margin: 8px;
+  }
+  .landing-user-avatar {
+    margin-bottom: 5px;
+  }
+}
+@media screen and (max-width: 450px) {
+  .landing-user {
+    flex-basis: 80%;
   }
 }
