--- a/resources/less/landing/users/landing.user.less
+++ b/resources/less/landing/users/landing.user.less
@@ -16,11 +16,7 @@
     width: 120px;
     height: 120px;
     border-radius: 50%;
-    overflow: hidden;
-
-    &__image {
-      height: 120%;
-    }
+    background-size: cover;
   }
 
   &__name {
