--- a/public/css/style.css
+++ b/public/css/style.css
@@ -158,11 +158,13 @@
   min-height: 200px;
 }
 .landing-book-cover {
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin-bottom: 20px;
-}
-.landing-book-cover__image {
   width: 100px;
+  height: 120px;
+  background-size: cover;
 }
 .landing-book__title {
   display: flex;
@@ -190,18 +192,18 @@
     margin: 8px;
   }
   .landing-book-cover {
-    margin-bottom: 5px;
-  }
-  .landing-book-cover__image {
     width: 150px;
+    height: 180px;
+    margin-bottom: 5px;
   }
 }
 @media screen and (max-width: 450px) {
   .landing-book {
     flex-basis: 80%;
   }
-  .landing-book-cover__image {
+  .landing-book-cover {
     width: 200px;
+    height: 240px;
   }
 }
 .landing-books-more {
@@ -248,10 +250,7 @@
   width: 120px;
   height: 120px;
   border-radius: 50%;
-  overflow: hidden;
-}
-.landing-user-avatar__image {
-  height: 120%;
+  background-size: cover;
 }
 .landing-user__name {
   display: flex;
