--- a/resources/less/landing/--landing.less
+++ b/resources/less/landing/--landing.less
@@ -7,6 +7,7 @@
 @import "landing.button.less";
 @import "landing.content.less";
 @import "landing.form.less";
+@import "landing.more.less";
 @import "element/--element.less";
 @import "books/--books.less";
 @import "users/--users.less";
