--- a/resources/less/landing/landing.more.less
+++ b/resources/less/landing/landing.more.less
@@ -1,4 +1,4 @@
-.landing-books-more {
+.landing-more {
   display: block;
   width: 150px;
   margin-top: 10px;
@@ -24,7 +24,7 @@
 }
 
 @media screen and (max-width: 910px) {
-  .landing-books-more {
+  .landing-more {
     margin-top: 5px;
   }
 }
