--- a/public/css/fix.css
+++ b/public/css/fix.css
@@ -1,119 +1,1 @@
-.temp-header-users-menu-content__logout-form {
-    display: none
-}
-
-.user-info {
-    margin-bottom: 10px
-}
-
-.user-info-avatar {
-    margin-bottom: 10px
-}
-
-.user-info-avatar__image {
-    width: 200px
-}
-
-.user-block-library__area {
-    margin-top: 10px
-}
-
-.book-cover {
-    margin-bottom: 10px
-}
-
-.book-cover__image {
-    width: 200px
-}
-
-.book-reader-block {
-    max-width: 600px
-}
-
-.book-reader-pagination {
-    text-align: center
-}
-
-.book-reader-block-content p {
-    min-height: 700px;
-    text-align: justify
-}
-
-#dots-1, #dots-2 {
-    padding: 6px 8px;
-    border-color: #fff
-}
-
-.user-block-books__element_status_close {
-    color: #8c8c8c
-}
-
-.books-list-cover__img {
-    width: 150px
-}
-
-.no-description {
-    color: #9b9b9b
-}
-
-.book-image {
-    margin-bottom: 10px
-}
-
-.book-edit-description, .review-edit-textarea, .user-edit-about {
-    min-width: 100%;
-    max-width: 100%;
-    min-height: 200px
-}
-
-.book-edit-description {
-    min-height: 400px
-}
-
-.review-avatar__image {
-    width: 120px
-}
-
-.users-list-avatar {
-    display: block;
-    width: 120px;
-    height: 120px;
-    border-radius: 50%;
-    background-size: cover
-}
-
-.users-list-info {
-    display: flex;
-    flex-direction: column
-}
-
-.users-list-name {
-    display: block;
-    margin-top: 10px;
-    font-size: 1.5em
-}
-
-.users-list-nickname {
-    display: block;
-    margin-left: 10px;
-    margin-bottom: 30px;
-    color: grey
-}
-
-.users-list-button {
-    display: block;
-    margin-left: auto;
-    margin-top: auto
-}
-.books-list-sort {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-}
-.books-list-heading {
-    font-size: 1.3em;
-    text-transform: uppercase;
-}
-.books-list-sort__open {
-    left: calc(100% - 215px);
-}
+.temp-header-users-menu-content__logout-form{display:none}.user-info{margin-bottom:10px}.user-info-avatar{margin-bottom:10px}.user-info-avatar__image{width:200px}.user-block-library__area{margin-top:10px}.book-cover{margin-bottom:10px}.book-cover__image{width:200px}.book-reader-block{max-width:600px}.book-reader-pagination{text-align:center}.book-reader-block-content p{min-height:700px;text-align:justify}#dots-1,#dots-2{padding:6px 8px;border-color:#fff}.user-block-books__element_status_close{color:#8c8c8c}.books-list-cover__img{width:150px}.no-description{color:#9b9b9b}.book-image{margin-bottom:10px}.book-edit-description,.review-edit-textarea,.user-edit-about{min-width:100%;max-width:100%;min-height:200px}.book-edit-description{min-height:400px}.review-avatar__image{width:120px}.users-list-avatar{display:block;width:120px;height:120px;border-radius:50%;background-size:cover}.users-list-info{display:flex;flex-direction:column}.users-list-name{display:block;margin-top:10px;font-size:1.5em}.users-list-nickname{display:block;margin-left:10px;margin-bottom:30px;color:grey}.users-list-button{display:block;margin-left:auto;margin-top:auto}.books-list-sort{display:flex;flex-direction:column;align-items:flex-end}.books-list-heading{font-size:1.3em}.books-list-sort__open{left:calc(100% - 215px)}
