Добавлены иконки на страницу 404

--- a/resources/css/fix.css
+++ b/resources/css/fix.css
@@ -121,7 +121,6 @@
 }
 
 .rating-icons {
-    position: relative;
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -139,19 +138,11 @@
 }
 
 .icon_down {
-    width: 0;
-    height: 0;
-    border: 10px solid rgba(0, 0, 0, 0);
-    border-top: 0 solid rgba(0, 0, 0, 0);
-    border-bottom: 15px solid rgba(0, 0, 0, 0.4);
+    background-image: url('/img/icon-down.png');
 }
 
 .icon_up {
-    width: 0;
-    height: 0;
-    border: 10px solid rgba(0, 0, 0, 0);
-    border-bottom: 0 solid rgba(0, 0, 0, 0);
-    border-top: 15px solid rgba(0, 0, 0, 0.4);
+    background-image: url('/img/icon-up.png');
 }
 
 .rating {
