Добавлено: профиль пользователя

--- a/resources/less/style-1.0/-common/block-content/block-content.less
+++ b/resources/less/style-1.0/-common/block-content/block-content.less
@@ -68,10 +68,20 @@
             }
         }
 
+        &__info {
+            &_large {
+                line-height: 1.5;
+            }
+        }
+
         &__title {
             justify-content: flex-end;
             margin-right: 10px;
             color: @darkergrey;
+
+            &_large {
+                margin-top: 0.15em;
+            }
 
             &:after {
                 content: ":";
