--- a/resources/less/style-1.0/footer/copyright.less
+++ b/resources/less/style-1.0/footer/copyright.less
@@ -3,7 +3,7 @@
         width: 152px;
         height: 31px;
         margin-bottom: 10px;
-        background: url("/css/img/logo__grey.png") no-repeat center center;
+        background: url("/img/logo__grey.png") no-repeat center center;
         background-size: 100% auto;
     }
 
