Добавлено: рецензии к книге

--- a/resources/less/style-1.0/book/review/title.less
+++ b/resources/less/style-1.0/book/review/title.less
@@ -1,5 +1,7 @@
 .review-title {
-    margin-bottom: 10px;
+    visibility: hidden;
+    height: 0;
+    box-sizing: border-box;
     font-weight: bold;
 
     @media screen and (max-width: @sm) {
