Добавлено: дизайн рецензии пользователя (без возможности удалить или редактировать)

--- a/resources/less/style-1.0/book/review/grade.less
+++ b/resources/less/style-1.0/book/review/grade.less
@@ -4,6 +4,11 @@
     align-items: center;
     margin-left: 10px;
 
+    &__value_guest {
+        font-size: 16px;
+        color: @darkergrey;
+    }
+
     .review-element[data-auth="true"][data-status="delete"] & {
         display: none;
     }
