--- a/resources/less/style-1.0/book/review/icon.less
+++ b/resources/less/style-1.0/book/review/icon.less
@@ -18,12 +18,12 @@
     &_edit {
         margin-left: auto;
         margin-right: 10px;
-        background-image: url(/css/img/icons/edit-pencil_grey.svg);
+        background-image: url(/img/icons/edit-pencil_grey.svg);
         background-size: 75% 75%;
     }
 
     &_delete {
-        background-image: url(/css/img/icons/close_grey.svg);
+        background-image: url(/img/icons/close_grey.svg);
         background-size: 85% 85%;
     }
 
