Добавлено: возможность оставлять и удалять рецензии

--- a/resources/less/style-1.0/book/review/grade.less
+++ b/resources/less/style-1.0/book/review/grade.less
@@ -40,15 +40,10 @@
         background: #efefef;
 
         &:disabled {
-            border-color: #f1f1f1;
-            background: #fbfbfb;
-            color: @grey;
+            opacity: 0.3;
 
             &:hover {
-                border-color: #f1f1f1;
-                background: #fbfbfb;
-                color: @grey;
-                cursor: auto;
+                opacity: 0.3;
             }
         }
 
