--- a/resources/less/style-1.0/book/review/title.less
+++ b/resources/less/style-1.0/book/review/title.less
@@ -21,7 +21,7 @@
             z-index: 100;
 
             width: 100%;
-            height: 8em;
+            max-height: 8em;
 
             background: rgba(255, 255, 255, 0.8);
         }
