Исправлено: отображение рецензий

--- a/resources/less/style-1.0/book/buttons.less
+++ b/resources/less/style-1.0/book/buttons.less
@@ -27,21 +27,7 @@
 
         background: @lightgrey;
 
-        &_1 {
-            height: ~"calc(170px + 1 * 50px)";
-        }
-        &_2 {
-            height: ~"calc(170px + 2 * 50px)";
-        }
-        &_3 {
-            height: ~"calc(170px + 3 * 50px)";
-        }
-        &_4 {
-            height: ~"calc(170px + 4 * 50px)";
-        }
-        &_5 {
-            height: ~"calc(170px + 5 * 50px)";
-        }
+        transition-duration: 0.2s;
 
         &:before,
         &:after {
