--- a/resources/less/style-1.0/book/review/-review.less
+++ b/resources/less/style-1.0/book/review/-review.less
@@ -1,6 +1,13 @@
 .review {
     max-width: 900px;
     margin-top: 80px;
+    margin-bottom: 40px;
+
+    &__no-reviews {
+        font-size: 16px;
+        color: @darkergrey;
+        text-align: center;
+    }
 
     &__header {
         font-size: 18px;
