Исправлено: чекбоксы при регистрации и авторизации

--- a/resources/less/style-1.0/authentication/checkbox.less
+++ b/resources/less/style-1.0/authentication/checkbox.less
@@ -6,7 +6,7 @@
 
     & .checkbox__field:checked + .checkbox-animation > .checkbox-animation__icon::before {
         top: .5em;
-        left: .1em;
+        left: ~"calc(50% + 3px)";
         animation: checkIcon_small 125ms 250ms cubic-bezier(0.3, 0, 0.23, 1) forwards;
     }
 
