Добавлено: список книг (без поиска и сортировки)

--- a/resources/less/style-1.0/book-list/element/genres.less
+++ b/resources/less/style-1.0/book-list/element/genres.less
@@ -29,6 +29,7 @@
         }
 
         &_active {
+            border-color: @lightgreen;
             background: @transparent;
 
             &:hover {
