--- a/resources/less/style-1.0/book-list/genres.less
+++ b/resources/less/style-1.0/book-list/genres.less
@@ -6,7 +6,7 @@
     overflow: hidden;
 
     margin-right: 20px;
-    margin-top: 61px;
+    margin-top: 70px;
 
     &__title {
         margin-bottom: 20px;
@@ -72,7 +72,7 @@
             height: 29px;
             
             border-radius: 5px;
-            background: url("/css/img/icons/checkmark.svg") 50% 50% no-repeat;
+            background: url("/img/icons/checkmark.svg") 50% 50% no-repeat;
             background-size: 60% 60%;
         }
     }
