--- a/resources/less/style-1.0/book-list/search.less
+++ b/resources/less/style-1.0/book-list/search.less
@@ -37,14 +37,14 @@
         border: none;
         border-radius: 5px;
         background: transparent 50% 50% no-repeat;
-        background-image: url("/css/img/icons/search_grey.svg");
+        background-image: url("/img/icons/search_grey.svg");
         background-size: 60% 60%;
 
         cursor: pointer;
         transition: background-inmage 0.3s;
 
         &:hover {
-            background-image: url("/css/img/icons/search_green.svg");
+            background-image: url("/img/icons/search_green.svg");
             outline: none;
         }
         &:active {
