--- a/resources/less/style-1.0/-common/block-content/block-content.less
+++ b/resources/less/style-1.0/-common/block-content/block-content.less
@@ -61,6 +61,7 @@
             display: flex;
             min-width: 150px;
             font-size: 15px;
+            word-wrap: break-word;
 
             @media screen and (max-width: 500px) {
                 font-size: 14px;
