Подсказки по названию книги

--- a/resources/less/style-1.0/book-list/search.less
+++ b/resources/less/style-1.0/book-list/search.less
@@ -70,6 +70,7 @@
         box-shadow: 0 5px 10px 5px rgba(0, 0, 0, 0.1);
 
         &__element {
+            cursor: pointer;
             display: block;
             overflow: hidden;
 
