Помежуточное: проврека данных на регистрацию по api

--- a/resources/less/style-1.0/registration/-registration.less
+++ b/resources/less/style-1.0/registration/-registration.less
@@ -20,7 +20,11 @@
         }
     }
 
-    &-agreement__href {
-        text-decoration: underline;
+    &-agreement {
+        margin-top: 10px;
+
+        &__href {
+            text-decoration: underline;
+        }
     }
 }
