--- a/resources/less/style-1.0/registration/element.less
+++ b/resources/less/style-1.0/registration/element.less
@@ -39,9 +39,15 @@
         width: 20px;
         height: 20px;
     }
+
     &__logo + &__field {
         padding-left: 45px;
     }
+
+    &__logo_none + &__field {
+        padding-left: 20px;
+    }
+
 
     &__flag {
         position: absolute;
