Добавлено: выведение ошибок в редактировании книги

--- a/resources/less/style-1.0/edit/block.less
+++ b/resources/less/style-1.0/edit/block.less
@@ -334,7 +334,7 @@
         align-items: center;
 
         width: 100%;
-        margin-bottom: 20px;
+        margin-bottom: 5px;
         padding: 10px;
 
         font-size: 14px;
@@ -345,6 +345,10 @@
 
         &_error {
             background: rgba(191, 6, 0, 0.1);
+        }
+
+        &__container {
+            margin-bottom: 15px;
         }
     }
 }
