Исправлено: отображение ошибок при редактировании рецензий

--- a/resources/less/style-1.0/book/review/new/form.less
+++ b/resources/less/style-1.0/book/review/new/form.less
@@ -21,6 +21,11 @@
             padding: 10px;
             border: 2px solid #efefef;
             background: #efefef;
+
+            &[data-has-error="true"] {
+                border-color: #fba0a0;
+            }
+
         }
 
         & textarea {
