Исправлено: баг с отображением панели сортировки в списке книг

--- a/resources/less/style-1.0/book-list/sort.less
+++ b/resources/less/style-1.0/book-list/sort.less
@@ -1,7 +1,11 @@
 .book-list-sort {
     flex-wrap: wrap;
     align-items: center;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
+
+    & & {
+        margin-bottom: 0;
+    }
 
     &__title {
         margin-right: 20px;
