Добавлено: закрытие мини-пофиля в хэдере на клик вне профиля

--- a/resources/less/style-1.0/header/main-buttons.less
+++ b/resources/less/style-1.0/header/main-buttons.less
@@ -70,6 +70,10 @@
             &-active {
                 display: none;
             }
+
+            &:focus {
+                outline: none !important;
+            }
         }
     }
 
