Добавлено: вывод ошибок редактирования книги по api

--- a/resources/less/style-1.0/edit/block.less
+++ b/resources/less/style-1.0/edit/block.less
@@ -183,6 +183,14 @@
                 margin: 5px 0;
                 text-align: left;
             }
+
+            &_checkboxes {
+                padding-top: 4px;
+
+                @media screen and (max-width: @md) {
+                    padding-top: 0;
+                }
+            }
         }
 
         &_string &__title {
