Добавлено: изменение логина и/или пароля по api Исправлено: формирование ссылки на профиль при изменении никнейма Исправлено: изменение ссылки страницы редактирования при изменении никнейма

--- a/resources/less/style-1.0/edit/block.less
+++ b/resources/less/style-1.0/edit/block.less
@@ -273,8 +273,9 @@
             }
 
             &_error {
+                margin-bottom: 10px;
                 font-size: 14px;
-                color: red;
+                color: #9a0000;
             }
 
             & > input[type="date"]:first-child {
