--- a/resources/less/style-1.0/--local/body.less
+++ b/resources/less/style-1.0/--local/body.less
@@ -8,4 +8,8 @@
     -webkit-tap-highlight-color: rgba(0,0,0,0);
     -webkit-tap-highlight-color: transparent;
     overflow-y: scroll;
+
+    &__main {
+       margin: 30px 0 40px;
+    }
 }
