Добавлено: дизайн списка книг и пользователей в лэндинге

--- a/resources/less/style-1.0/style.less
+++ b/resources/less/style-1.0/style.less
@@ -10,5 +10,6 @@
 @import "registration/--registration";
 @import "authentication/--authentication";
 @import "footer/--footer";
+@import "landing/--landing";
 
 @import "edit/--edit";
